# MCP-Crash-Course

./: langchain_client.py  main.py  pyproject.toml
servers/: weather_server.py
